--- a/maven-archetype-soa/src/main/resources/archetype-resources/__rootArtifactId__-service/pom.xml
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/__rootArtifactId__-service/pom.xml
@@ -93,6 +93,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
