--- a/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
@@ -79,7 +79,13 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.8.4</version>
+                <version>${dubbo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.sgroschupf</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
             </dependency>
 
             <!-- 基础jar依赖 start-->
