--- a/maven-archetype-soa/src/main/resources/archetype-resources/__rootArtifactId__-deploy/src/main/resources/container.properties
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/__rootArtifactId__-deploy/src/main/resources/container.properties
@@ -6,6 +6,7 @@ dubbo.port=${dubbo.port}
 dubbo.registry.address=${dubbo.registry.address}
 dubbo.protocol=${dubbo.protocol}
 dubbo.rest.port=${dubbo.rest.port}
+dubbo.rest.server=${dubbo.rest.server}
 dubbo.rest.contextpath=${dubbo.rest.contextpath}
 dubbo.rest.iothreads=${dubbo.rest.iothreads}
 dubbo.rest.threads=${dubbo.rest.threads}
@@ -13,6 +14,10 @@ dubbo.consumer.timeout=${dubbo.consumer.timeout}
 
 #monitor
 dubbo.monitor.address=${dubbo.monitor.address}
+
+#log config
+logger.path=${logger.path}
+logger.level=${logger.level}
 
 #mbean
 mx4j.http.adaptor.port=${mx4j.http.adaptor.port}
