--- a/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
@@ -23,6 +23,10 @@
 
     <properties>
         <junit.version>4.12</junit.version>
+        <zkclient.version>0.1</zkclient.version>
+        <resteasy.version>3.0.12.Final</resteasy.version>
+        <validation.version>1.1.0.Final</validation.version>
+        <dubbo.version>2.8.4</dubbo.version>
         <javassist.version>3.21.0-GA</javassist.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-collections.version>3.2.2</commons-collections.version>
@@ -80,6 +84,41 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jaxrs</artifactId>
+                <version>${resteasy.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-client</artifactId>
+                <version>${resteasy.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>jaxrs-api</artifactId>
+                <version>${resteasy.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-netty</artifactId>
+                <version>${resteasy.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jackson-provider</artifactId>
+                <version>${resteasy.version}</version>
             </dependency>
 
             <dependency>
