--- a/maven-archetype-web/src/main/resources/archetype-resources/__rootArtifactId__-deploy/src/main/resources/jdbc.properties
+++ b/maven-archetype-web/src/main/resources/archetype-resources/__rootArtifactId__-deploy/src/main/resources/jdbc.properties
@@ -1,4 +1,3 @@
-master.jdbc.url=${master.jdbc.url}
-master.jdbc.username=${master.jdbc.username}
-master.jdbc.password=${master.jdbc.password}
-
+jdbc.url=${jdbc.url}
+jdbc.username=${jdbc.username}
+jdbc.password=${jdbc.password}
