--- a/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
@@ -32,8 +32,8 @@
         <commons-collections.version>3.2.2</commons-collections.version>
         <gson.version>2.3.1</gson.version>
         <lombok.version>1.16.12</lombok.version>
-        <spring.version>4.3.4.RELEASE</spring.version>
         <mockito.version>1.10.19</mockito.version>
+        <spring.version>4.3.4.RELEASE</spring.version>
         <mysql-connector-java.version>5.1.30</mysql-connector-java.version>
         <mybatis.version>3.4.1</mybatis.version>
         <mybatis-spring.version>1.3.0</mybatis-spring.version>
@@ -89,6 +89,7 @@
             <dependency>
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
+                <version>1.1.0.Final</version>
             </dependency>
 
             <dependency>
