--- a/maven-archetype-web/pom.xml
+++ b/maven-archetype-web/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.qsd.maven.archetypes</groupId>
         <artifactId>skeleton</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>maven-archetype-web</artifactId>
     <packaging>maven-archetype</packaging>
