--- a/maven-archetype-web/src/main/resources/archetype-resources/__rootArtifactId__-deploy/pom.xml
+++ b/maven-archetype-web/src/main/resources/archetype-resources/__rootArtifactId__-deploy/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>${groupId}</groupId>
-            <artifactId>${rootArtifactId}-service</artifactId>
+            <artifactId>${rootArtifactId}-web</artifactId>
         </dependency>
     </dependencies>
 
