--- a/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
+++ b/maven-archetype-soa/src/main/resources/archetype-resources/pom.xml
@@ -87,6 +87,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
                 <version>1.1.0.Final</version>
